<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    tools:context=".Activities.GalleryActivities.ContentViewerActivity">

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:contentDescription="@string/imageView"
        android:gravity="center"
        android:keepScreenOn="true"
        android:textColor="#33b5e5"
        android:textSize="50sp"
        android:textStyle="bold"
        tools:srcCompat="@tools:sample/avatars" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="@style/ViewerButtonsStyle"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_gravity="bottom|center_horizontal"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <ImageButton
                android:id="@+id/share_button"
                style="@style/MediaViewerOptionButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/share_button"
                android:src="@drawable/share"
                android:text="@string/ShareButton" />

            <ImageButton
                android:id="@+id/save_button"
                style="@style/MediaViewerOptionButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/save_button"
                android:src="@drawable/download"
                android:text="@string/save_to_device" />

            <ImageButton
                android:id="@+id/delete_button"
                style="@style/MediaViewerOptionButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/delete_button"
                android:src="@drawable/trash"
                android:text="@string/Delete" />

            <ImageButton
                android:id="@+id/rotate_left_button"
                style="@style/MediaViewerOptionButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/rotate"
                android:src="@drawable/rotate"
                android:text="@string/rotate" />

            <ImageButton
                android:id="@+id/rotate_right_button"
                style="@style/MediaViewerOptionButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/rotate"
                android:rotationY="180"
                android:src="@drawable/rotate"
                android:text="@string/rotate" />

        </LinearLayout>

    </FrameLayout>
</FrameLayout>